// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFormula normal expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": Object {
                  "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
                  "kind": "Variable",
                  "name": "num1",
                  "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                },
                "code": "Variable",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "type": "number",
                "value": "num1",
                "wrapQuote": true,
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`useFormula spreadsheet expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": undefined,
                "code": "Equal",
                "display": "=",
                "errors": Array [],
                "hide": false,
                "type": "any",
                "value": "=",
                "wrapQuote": false,
              },
              "type": "FormulaType",
            },
          ],
          "text": "=",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": Object {
                  "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
                  "kind": "Variable",
                  "name": "num1",
                  "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                },
                "code": "Variable",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "type": "number",
                "value": "num1",
                "wrapQuote": true,
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
